[package]
name = "nft_api"  # Replace with your project name
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0"  # For Ethereum interactions
reqwest = { version = "0.12", features = ["json"] }  # Ensure the json feature is included
tokio = { version = "1", features = ["full"] }  # For async runtime
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_json = "1.0"  # For JSON handling
env_logger = "0.10"  # For logging
log = "0.4"  # For logging
dotenv = "0.15"  # For loading environment variables from a .env file
alchemy-api = "0.1"  # Replace with the actual version of the Alchemy API crate
warp = "0.3"  # For building the web server

