[package]
name = "nft_api" 
version = "0.1.0"
edition = "2021"

[dependencies]
#ethers = "2.0"
reqwest = { version = "0.12", features = ["json"] }  
tokio = { version = "1", features = ["full"] } 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
alchemy-api = "0.1"
warp = "0.3"

